--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -9,9 +9,9 @@
     <script>
       window.drupalSettings = {};
 
-      window.drupalSettings.plb = [
+      window.drupalSettings.merlb = [
         {
-          mountPoint: "#plb-app",
+          mountPoint: "#merlb-app",
           layout: {
             rows: [
               {
@@ -44,7 +44,7 @@
           ],
         },
         {
-          mountPoint: "#plb-app2",
+          mountPoint: "#merlb-app2",
           layout: {
             rows: [
               {
@@ -69,8 +69,8 @@
     </script>
   </head>
   <body>
-    <div id="plb-app"></div>
-    <div id="plb-app2"></div>
+    <div id="merlb-app"></div>
+    <div id="merlb-app2"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
